# RaytracerRust

./: Cargo.toml  README.md
examples/: simple.json
src/: camera.rs  main.rs  material.rs  ray.rs  scene.rs  sphere.rs  vector.rs
src/math/: ray.rs  vector.rs  vector3d.rs
