[package]
name = "raytracer_rust"
version = "0.1.0"
authors = ["Nicolas Hollmann"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
